--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link href="css/slider.css" rel="stylesheet">
 </head>
 <body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -34,267 +33,6 @@
                 </div>
             </div>
     </nav>
-    <div id="golovna">
-        <div class="container">
-            <div class="row centered">
-                <div class="col-lg-8 col-lg-offset-2 text-block1_1">
-                    <img src="img/logo.png" alt="Logo" class="" height="300">
-                    <h2>2017</h2>
-                    <br/><h1>ВІДЧУЙ СЕБЕ ЖИВИМ</h1><br/><br/>
-                </div>
-            </div>
-            <div class="row centered">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-4">
-                    <button type="button" class="btn btn-default btn-lg button-one" aria-label="Left Align">
-                        <span class="glyphicon glyphicon-play-circle but-icon" aria-hidden="true"></span><strong>ПРОМО</strong></button>
-                </div>
-                <div class="col-lg-3"><button type="button" class="btn btn-default btn-lg button-two">ЗАРЕЄСТРУВАТИСЯ</button></div>
-                <div class="col-lg-3">
-<!--                     <button type="button" class="btn btn-default btn-lg button-two">
-                        <span class="glyphicon glyphicon-play-circle but-icon" aria-hidden="true"></span> ПРОМО
-                    </button> -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="pro_tabir">
-        <div class="container-fluid">
-            <div class="row centered">
-                <div class="col-lg-3 text-block2_1" >
-                    <div class="text-innerblock2_1">
-                        <h1>ДЛЯ КОГО?</h1>
-                        <h4>Для молоді, яка<br/>відчуває себе<br/>живою, активною<br/>та драйвовою!</h4>
-                    </div>
-                </div>
-                <div class="col-lg-6 text-block2_2">
-                    <img src="img/logo.png" alt="Logo" class="" height="200">
-                    <h3>2017</h3>
-                </div>
-                <div class="col-lg-3 text-block2_3">
-                    <div class="">
-                        <h1>ДЛЯ ЧОГО?</h1>
-                        <h4>Для розвитку та відпочинку<br/>чотирьох невід'ємних<br/>складових людини-<br/>духу, душі, тіла і розуму.</h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row centered">
-                <div class="col-lg-8 col-lg-offset-2 text-block2_4">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>ЗАЇЗДИ<br/>ALIVE CAMP</th>
-                                <th>ДАТА</th>
-                                <th>ВІК</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td><span>1</span></td>
-                                <td class="table-dashed">З 22 ПО 30 ЧЕРВНЯ</td>
-                                <td>16-26 РОКІВ</td>
-                            </tr>
-                            <tr>
-                                <td><span>2</span></td>
-                                <td>З 30 ЧЕРВНЯ ПО 8 ЛИПНЯ</td>
-                                <td>16-26 РОКІВ</td>
-                            </tr>
-                            <tr>
-                                <td><span>3</span></td>
-                                <td>З 8 ПО 16 ЛИПНЯ</td>
-                                <td>16-26 РОКІВ</td>
-                            </tr>
-                            <tr class="table-backdown">
-                                <td><span>4</span></td>
-                                <td>З 16 ПО 24 ЛИПНЯ <strong>LITE</strong><sup>&#9913</sup></td>
-                                <td>ВІК УЧАСНИКІВ<br/>НЕОМЕЖЕНИЙ</td>
-                          </tr>
-                          <tr>
-                            <td><span>5</span></td>
-                            <td>З 24 ПО 1 СЕРПНЯ</td>
-                            <td>16-26 РОКІВ</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    <p><sup><span>&#9913</span></sup><small> Lite - програма для учасників є необов'язковою;</small></p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="vas_ochikuye">
-        <div class="container">
-            <div class="row centered">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h1>ВАС ОЧІКУЄ</h1>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row centered block-icon">
-                <div class="col-lg-3">
-                    <img src="img/icon_1.png">
-                    <p>Мальовниче озеро<br/>Свіже повітря<br/>Відпочинкова зона<br/>Вогонь, гітара, зорі</p>
-                </div>
-                <div class="col-lg-3">
-                    <img src="img/icon_2.png">
-                    <p>Нові знайомства<br/>Подарунки від організаторів<br/>Незабутні вечірки<br/>English club</p>
-                </div>
-                <div class="col-lg-3">
-                    <img src="img/icon_3.png">
-                    <p>Мальовниче озеро<br/>Свіже повітря<br/>Відпочинкова зона<br/>Вогонь, гітара, зорі</p>
-                </div>
-                <div class="col-lg-3">
-                    <img src="img/icon_4.png">
-                    <p>Мальовниче озеро<br/>Свіже повітря<br/>Відпочинкова зона<br/>Вогонь, гітара, зорі</p>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row centered">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h1>ЗРУЧНОСТІ</h1>
-                    <p>Для того, щоб зробити ваше життя у наметовому містечку Alive Camp ще кращим, ми оснащуємо територію різноманітними зручностями:</p>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row centered col-lg-offset-1 block3_1">
-                <div class="col-lg-3">
-                    <p>1. Душі<br/>2. Туалети<br/>3. Умивальники<br/>4. Столи</p>
-                </div>
-                <div class="col-lg-3">
-                    <p>5. Лавочки<br/>6. Постійна точка<br/>для зарядки<br/>ваших пристроїв</p>
-                </div>
-                <div class="col-lg-3">
-                    <p>7. Накриття від дощу<br/>8. Фото-зона<br/>9. Relax-зона<br/>відпочинку</p>
-                </div>
-                <div class="col-lg-3">
-                    <p>10. Міні-кафе<br/>11. Тенісний стіл<br/>12. Гойдалки</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="rozporyadok">
-            <div class="col-lg-12">
-                <div class="brd">
-                    <h2 class="metro">Орієнтовний розпорядок дня</h2>
-                    <div class="col-lg-5 col-lg-offset-1">
-            <p><font color="gold">7.45</font> - Підйом</p>
-                        <p><font color="gold">08.00</font> - Зарядка</p>
-                        <p><font color="gold">08.15</font> - Сніданок</p>
-                        <p><font color="gold">09.30</font> - Активності для тіла</p>
-                        <p><font color="gold">11.00</font> - Активності для духу</p>
-                        <p><font color="gold">12.00</font> - Активності для розуму</p>
-                        <p><font color="gold">13.30</font> - Обід та вільний час</p>
-                    </div>
-          <div class="col-lg-6>">
-                        <p><font color="gold">15.00</font> - Активності для саморозвитку</p>
-                        <p><font color="gold">16.00</font> - Командні ігри, турніри, квести</p>
-                        <p><font color="gold">18.30</font> - Активності для душі</p>
-                        <p><font color="gold">19.30</font> - Вечеря</p>
-                        <p><font color="gold">20.45</font> - Вечірня програма</p>
-                        <p><font color="gold">22.30</font> - Відпочинкова зона</p>
-                        <p><font color="gold">00.00</font> - Відбій</p>
-                    </div>
-        </div>
-            </div>
-    </div>
-        <div id="aktyvnosti">
-          <div class="row centered aktyv">
-                        <h1 class="aktyv">АКТИВНОСТІ</h1>
-                            <h2 class="aktyv-underline">ДЛЯ ТІЛА</h2>
-                            <div class="col-lg-12">
-                                <div class="circle col-lg-2 col-lg-offset-1">
-                                    <img src="img\ico_round_vol.png" alt="футбол" class="image-tam">
-                                    <span class="text_center pos_vol">ВОЛЕЙБОЛ</span>
-                                </div>
-                                <div class="circle col-lg-2 ">
-                                    <img src="img\ico_round_foot.png" alt="футбол" class="image-tam">
-                                    <span class="text_center pos_foot">ФУТБОЛ</span>
-                                </div>
-                                <div class="circle col-lg-2">
-                                    <img src="img\ico_round_ten.png" alt="НАСТІЛЬНИЙ ТЕНІС" class="image-tam">
-                                    <span class="text_center pos_ten">НАСТІЛЬНИЙ ТЕНІС</span>
-                                </div>
-                                <div class="circle col-lg-2 ">
-                                    <img src="img\ico_round_badm.png" alt="БАДМІНТОН" class="image-tam">
-                                    <span class="text_center pos_badm">БАДМІНТОН</span>
-                                </div>
-                                <div class="circle col-lg-2 ">
-                                    <img src="img\ico_round_polo.png" alt="ВОДНЕ ПОЛО" class="image-tam">
-                                    <span class="text_center pos_polo">ВОДНЕ ПОЛО</span>
-                                </div>
-                        </div>
-                    </div>
-                    <div class="row centered">
-                        <h2 class="aktyv-underline ringo">ДЛЯ ДУХУ</h2>
-                        <div class="col-lg-12 rin">
-                            <div class="circle col-lg-2 col-lg-offset-2">
-                                <img src="img\ico_round_pr.png" alt="РІЗНІ ВИДИ МОЛИТОВ" class="image-tam">
-                                <span class="text_center pos_vol">РІЗНІ ВИДИ МОЛИТОВ</span>
-                            </div>
-                            <div class="circle col-lg-2 ">
-                                <img src="img\ico_round_hb.png" alt="РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ" class="image-tam">
-                                <span class="text_center pos_foot">РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ</span>
-                            </div>
-                            <div class="circle col-lg-2">
-                                <img src="img\1.png" alt="БЕСІДИ ПРО ХРИСТИЯНСТВО" class="image-tam">
-                                <span class="text_center pos_ten">БЕСІДИ ПРО ХРИСТИЯНСТВО</span>
-                            </div>
-                            <div class="circle col-lg-2 ">
-                                <img src="img\ico_round_qu.png" alt="ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ" class="image-tam">
-                                <span class="text_center pos_badm">ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ</span>
-                            </div>
-                      </div>
-                    </div>
-                    <div class="delta">
-                        <div class="row centered">
-                          <h2 class="aktyv-underline ringo">ДЛЯ РОЗУМУ</h2>
-                                <div class="col-lg-12 rin">
-                                    <div class="circle col-lg-2 col-lg-offset-2">
-                                        <img src="img\ico_round_ma.png" alt="РІЗНІ ВИДИ МОЛИТОВ" class="image-tam">
-                                        <span class="text_center pos_vol">МАФІЯ</span>
-                                    </div>
-                                    <div class="circle col-lg-2 ">
-                                        <img src="img\dix.png" alt="РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ" class="image-tam">
-                                        <span class="text_center pos_foot">DIXIT, TWINS, UNO, JENGA та ІНШІ</span>
-                                    </div>
-                                    <div class="circle col-lg-2">
-                                        <img src="img\ico_round_pa.png" alt="БЕСІДИ ПРО ХРИСТИЯНСТВО" class="image-tam">
-                                        <span class="text_center pos_ten">ПАРАСТАС</span>
-                                    </div>
-                                    <div class="circle col-lg-2 ">
-                                        <img src="img\ico_round_zo.png" alt="ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ" class="image-tam">
-                                        <span class="text_center pos_badm">ЗООПАРК</span>
-                                    </div>
-                               </div>
-                            </div>
-                        <div class="row centered">
-                          <h2 class="aktyv-underline ringo">ДЛЯ САМОРОЗВИТКУ</h2>
-                            <div class="col-lg-12 rin">
-                                    <div class="circle col-lg-2 col-lg-offset-2">
-                                        <img src="img\ico_round_gi.png" alt="УРОКИ ГРИ НА ГІТАРІ" class="image-tam">
-                                        <span class="text_center pos_vol">УРОКИ ГРИ НА ГІТАРІ</span>
-                                    </div>
-                                    <div class="circle col-lg-2 ">
-                                        <img src="img\ico_round_re.png" alt="КУРС ПО СТОСУНКАХ" class="image-tam">
-                                        <span class="text_center pos_foot">КУРС ПО СТОСУНКАХ</span>
-                                    </div>
-                                    <div class="circle col-lg-2">
-                                        <img src="img\enсlab.png" alt="ENGLISH CLUB" class="image-tam">
-                                        <span class="text_center pos_ten">ENGLISH CLUB</span>
-                                    </div>
-                                    <div class="circle col-lg-2 ">
-                                        <img src="img\ico_round_po.png" alt="ПОЕТИЧНІ ВИСТУПИ" class="image-tam">
-                                        <span class="text_center pos_badm">ПОЕТИЧНІ ВИСТУПИ</span>
-                                    </div>
-                              </div>
-                        </div>
-                    </div>
-            </div>
     <!-- REGISTRATION SECTION -->
     <a name="reg__section" class="anchor"></a>
     <section class="reg__section">
@@ -545,23 +283,22 @@
 <!--     <script src="js/slider.js"></script>
     <script src="../modal_window"></script> -->
     <script type="text/javascript">
-        $(document).ready(function() { // вся мaгия пoсле зaгрузки стрaницы
-            $('a#go').click( function(event){ // лoвим клик пo ссылки с id="go"
-                event.preventDefault(); // выключaем стaндaртную рoль элементa
-                $('#overlay').fadeIn(400, // снaчaлa плaвнo пoкaзывaем темную пoдлoжку
-                    function(){ // пoсле выпoлнения предъидущей aнимaции
+        $(document).ready(function() { 
+            $('a#go').click( function(event){
+                event.preventDefault();
+                $('#overlay').fadeIn(400,
+                    function(){
                         $('#modal_form') 
-                            .css('display', 'block') // убирaем у мoдaльнoгo oкнa display: none;
-                            .animate({opacity: 1, top: '50%'}, 200); // плaвнo прибaвляем прoзрaчнoсть oднoвременнo сo съезжaнием вниз
+                            .css('display', 'block')
+                            .animate({opacity: 1, top: '50%'}, 200);
                 });
             });
-            /* Зaкрытие мoдaльнoгo oкнa, тут делaем тo же сaмoе нo в oбрaтнoм пoрядке */
-            $('#modal_close, #overlay').click( function(){ // лoвим клик пo крестику или пoдлoжке
+            $('#modal_close, #overlay').click( function(){
                 $('#modal_form')
-                    .animate({opacity: 0, top: '45%'}, 200,  // плaвнo меняем прoзрaчнoсть нa 0 и oднoвременнo двигaем oкнo вверх
-                        function(){ // пoсле aнимaции
-                            $(this).css('display', 'none'); // делaем ему display: none;
-                            $('#overlay').fadeOut(400); // скрывaем пoдлoжку
+                    .animate({opacity: 0, top: '45%'}, 200,
+                        function(){
+                            $(this).css('display', 'none'); 
+                            $('#overlay').fadeOut(400);
                         }
                     );
             });
