--- a/index.html
+++ b/index.html
@@ -46,8 +46,34 @@
                 </div>
             </div>
             <div class="row buttons centered">
+
+                <div id="myModal" class="modal fade">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                <h4 class="modal-title">Alive Camp</h4>
+                            </div>
+                            <div class="modal-body">
+                                <iframe id="cartoonVideo" width="560" height="315" src="//www.youtube.com/embed/YE7VzlLtp-4" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script type="text/javascript">
+                    $(document).ready(function(){
+                        var url = $("#cartoonVideo").attr('src');
+                        $("#myModal").on('hide.bs.modal', function(){
+                            $("#cartoonVideo").attr('src', '');
+                        });
+                        $("#myModal").on('show.bs.modal', function(){
+                            $("#cartoonVideo").attr('src', url);
+                        });
+                    });
+                </script>
+
                 <div class="col-lg-3 col-lg-offset-3">
-                    <a href="https://www.youtube.com/watch?v=w14t6go9mx8&t=1s">
+                    <a href="#myModal" data-toggle="modal">
                         <button type="button" class="btn btn-default btn-lg button-one centered" aria-label="Left Align">
                             <span class="glyphicon glyphicon-play-circle but-icon" aria-hidden="true"></span>
                             <span class="promo">ПРОМО</span>
